# erp-pdv-desktop-python

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  settings.json
assets/: style.qss
cloud_backups/: backup_20260216_223218.db.vault
src/app/: main.py
src/app/api/: deps.py  server.py
src/app/api/routers/: products.py  reports.py  sales.py  suppliers.py
src/app/api/schemas/: product.py  report.py  reports.py  sale.py  sales.py  stock.py  supplier.py
src/app/clients/: api_client.py
src/app/core/: auth.py  backup.py  config.py  database.py  fiscal.py  printer.py  security_vault.py
src/app/db/: base.py  migrations.py  session.py
src/app/db/migrations/: env.py
src/app/db/models/: __init__.py  product.py  sale.py  (+4 more)
src/app/ui/: admin_page.py  bi_page.py  cash_dialog.py  crm_page.py  customers_window.py  dashboard_page.py  event_bus.py  finance_page.py  fiscal_page.py  fleet_page.py  hr_page.py  import_page.py  inventory_page.py  lock_screen.py  login_page.py  main_window.py  manual_purchase_page.py  master_page.py  monitoring_page.py  orders_page.py  os_page.py  pos_page.py  product_dialog.py  production_page.py  products_window.py  purchases_page.py  quality_page.py  reports_page.py  sales_history_page.py  settings_page.py  stock_dialog.py  supplier_dialog.py  suppliers_window.py
src/app/utils/: acbr_engine.py  audit_logger.py  backup_engine.py  cash_engine.py  cloud_sync.py  commission_engine.py  finance_engine.py  fiscal_builder.py  fiscal_engine.py  pdf_generator.py  quality_engine.py  stats_engine.py  tax_engine.py
(+12 files in other folders)
