[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erp-pdv"
version = "0.1.0"
description = "ERP/PDV Desktop: PySide6 + FastAPI + SQLAlchemy + Alembic (offline-first)"
requires-python = ">=3.11"
dependencies = [
  "pyside6>=6.6",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.19",
  "httpx>=0.26",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "alembic>=1.13",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
